trunk/Archive2/9c/983a737d884911/output
main.cpp:13:5: error: no matching function for call to 'func'
    func({1, 2});
    ^~~~
main.cpp:6:6: note: candidate template ignored: couldn't infer template argument 'T'
void func(T arg) {
     ^
1 error generated.
